# cmake-template

./: .gitignore.txt  CMakeLists.txt  README.md  build_linux.sh  build_osx.sh  build_osx_xcode.sh
cmake/: ExternalModules.cmake
src/: example.cpp  example.h  main.cpp
test/: example_unit_test.cpp
test/data/: README.md
